docs/v7.1/properties/P43.md
---
layout: page
title: P43 a pour dimension (est la dimension de)
titleEn: P43 has dimension (is dimension of) - a pour dimension (est la dimension de)
permalink: /v7.1/proprietes/P43
sidebar: v71
group: proprietes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Domaine</strong></td>
<td class="en">
<p>E70 Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E70_Chose</code></p>
</td>
</tr>
<tr>
<td><strong>Portée</strong></td>
<td class="en">
<p>E54 Dimension</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E54_Dimension</code></p>
</td>
</tr>
<tr>
<td><strong>Sous-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Super-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Quantification</strong></td>
<td class="en">
<p>one to many, dependent (0,n:1,1) </p>
</td>
<td>
<p>un à plusieurs, dépendant (0,n:1,1)</p>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This property records a E54 Dimension of some E70 Thing.</p>
<p>This property is a shortcut of the more fully developed path from E70 Thing through <em>P39i was measured by</em>, E16 Measurement, <em>P40 observed dimension</em>, to E54 Dimension. It offers no information about how and when an E54 Dimension was established, nor by whom.</p>
<p>An instance of E54 Dimension is specific to an instance of E70 Thing.</p>
</td>
<td>
<p>Cette propriété enregistre une instance de <code class="language-plaintext highlighter-rouge">E54_Dimension</code> se rapportant à une instance de <code class="language-plaintext highlighter-rouge">E70_Chose</code>.</p>
<p>Cette propriété est un raccourci du chemin sémantique suivant : <code class="language-plaintext highlighter-rouge">E70_Chose</code>, <code class="language-plaintext highlighter-rouge">P39i_a_été_mesuré_par</code>, <code class="language-plaintext highlighter-rouge">E16_Mesurage</code>, <code class="language-plaintext highlighter-rouge">P40_a_relevé_comme_dimension (a_été_relevé_par)</code>, <code class="language-plaintext highlighter-rouge">E54_Dimension</code>.</p>
<p>La propriété  <code class="language-plaintext highlighter-rouge">P43_a_pour_dimension (est_la_dimension_de)</code> n'offre aucune information sur comment et quand une instance de <code class="language-plaintext highlighter-rouge">E54_Dimension</code> a été établie, ni par qui.</p>
<p>Une instance de <code class="language-plaintext highlighter-rouge">E54_Dimension</code> est spécifique à une instance de <code class="language-plaintext highlighter-rouge">E70_Chose</code>.   </p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>silver cup 232 (E22) <em>has dimension</em> height of silver cup 232 (E54) <em>has unit (P91)</em> mm (E58), <em>has value (P90)</em> 224 (E60) (fictitious) </p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>La coupe en argent « 232 » (<code class="language-plaintext highlighter-rouge">E22_Objet_élaboré_par_l’humain</code>) a pour dimension (<code class="language-plaintext highlighter-rouge">P43_a_pour_dimension</code>) la hauteur de la coupe en argent « 232 » (<code class="language-plaintext highlighter-rouge">E54_Dimension</code>) qui a pour unité de mesure (<code class="language-plaintext highlighter-rouge">P91_a_pour_unité_de_mesure</code>) « mm » (<code class="language-plaintext highlighter-rouge">E58_Unité_de_mesure</code>) et pour valeur (<code class="language-plaintext highlighter-rouge">P90_a_pour_valeur</code>) « 224 » (<code class="language-plaintext highlighter-rouge">E60_Nombre</code>) (fictif)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>P43(x,y) ⇒ E70(x) </p>
<p>P43(x,y) ⇒ E54(y) </p>
<p>P43(x,y) ⇐ (∃z) [E16(z) ˄ P39i(x,z) ˄ P40(z,y)]</p>
</td>
<td>
<p>P43(x,y) ⇒ E70(x) </p>
<p>P43(x,y) ⇒ E54(y) </p>
<p>P43(x,y) ⇐ (∃z) [E16(z) ˄ P39i(x,z) ˄ P40(z,y)]</p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
</td>
</tr>
</tbody>
</table>
