docs/v7.1.2/properties/P43.md
---
layout: page
title: P43 a pour dimension (est la dimension de)
titleEn: P43 has dimension (is dimension of) - a pour dimension (est la dimension de)
permalink: /v7.1.2/proprietes/P43
sidebar: v712
group: proprietes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Domaine</strong></p></td>
<td class="en">
<p>E70 Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E70_Chose</code></p>
</td>
</tr>
<tr>
<td><p><strong>Portée</strong></p></td>
<td class="en">
<p>E54 Dimension</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E54_Dimension</code></p>
</td>
</tr>
<tr>
<td><p><strong>Sous-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Super-propriété de</strong></p></td>
<td class="en">
</td>
<td>
<p><code class="language-plaintext highlighter-rouge"></code></p>
</td>
</tr>
<tr>
<td><p><strong>Quantification</strong></p></td>
<td class="en">
<p>one to many, dependent (0,n:1,1) </p>
</td>
<td>
<p>un à plusieurs, dépendant (0,n:1,1)</p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This property records an instance of E54 Dimension of some instance of E70 Thing.</p>
<p>In the case that the recorded property is a result of a measurement of an instance of E18 Physical Thing, this property is a shortcut of the more fully developed path from E18 Physical Thing through <em>P39i was measured by</em>, E16 Measurement, <em>P40 observed dimension</em> to E54 Dimension.</p>
<p>It offers no information about how and when an E54 Dimension was established, nor by whom. Knowledge about an instance of E54 Dimension need not be the result of a measurement; it may be the result of evaluating data or other information, which should be documented as an instance of E13 Attribute Assignment. </p>
<p>An instance of E54 Dimension is specific to an instance of E70 Thing.</p>
</td>
<td>
<p>Cette propriété enregistre une instance de <code class="language-plaintext highlighter-rouge">E54_Dimension</code> se rapportant à une instance de <code class="language-plaintext highlighter-rouge">E70_Chose</code>.</p>
<p>Cette propriété est un raccourci du chemin sémantique suivant : <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code>, <code class="language-plaintext highlighter-rouge">P39i_a_été_mesuré_par</code>, <code class="language-plaintext highlighter-rouge">E16_Mesurage</code>, <code class="language-plaintext highlighter-rouge">P40_a_relevé_comme_dimension (a_été_relevé_par)</code>, <code class="language-plaintext highlighter-rouge">E54_Dimension</code>. </p>
<p>La propriété  <code class="language-plaintext highlighter-rouge">P43_a_pour_dimension (est_la_dimension_de)</code> n'offre aucune information sur comment et quand une instance de <code class="language-plaintext highlighter-rouge">E54_Dimension</code> a été établie, ni par qui. La connaissance à propos d’une instance de <code class="language-plaintext highlighter-rouge">E54_Dimension</code> n’est pas nécessairement le résultat d’une activité de mesurage; elle peut être le résultat d’une activité d’évaluation de données ou d’autres informations. Dans ce cas, l'activité doit être documentée comme une instance de <code class="language-plaintext highlighter-rouge">E13_Assignation_d’attribut</code>.</p>
<p>Une instance de <code class="language-plaintext highlighter-rouge">E54_Dimension</code> est spécifique à une instance de <code class="language-plaintext highlighter-rouge">E70_Chose</code>.   </p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>Silver cup 232 (E22) <em>has dimension</em> height of silver cup 232 (E54). [which <em>has unit (P91)</em> mm (E58), <em>has value (P90)</em> 224 (E60) ] (fictitious) </p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>La coupe en argent « 232 » (<code class="language-plaintext highlighter-rouge">E22_Objet_élaboré_par_l’humain</code>) a pour dimension (<code class="language-plaintext highlighter-rouge">P43_a_pour_dimension</code>) la hauteur de la coupe en argent « 232 » (<code class="language-plaintext highlighter-rouge">E54_Dimension</code>) [qui a pour unité de mesure (<code class="language-plaintext highlighter-rouge">P91_a_pour_unité_de_mesure</code>) « mm » (<code class="language-plaintext highlighter-rouge">E58_Unité_de_mesure</code>) et pour valeur (<code class="language-plaintext highlighter-rouge">P90_a_pour_valeur</code>) « 224 » (<code class="language-plaintext highlighter-rouge">E60_Nombre</code>)] (fictif)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>P43(x,y) ⇒ E70(x) P43(x,y) ⇒ E54(y) P43(x,y) ⇐ (∃z) [E16(z) ˄ P39i(x,z) ˄ P40(z,y)]</p>
</td>
<td>
<p>P43(x,y) ⇒ E70(x) P43(x,y) ⇒ E54(y) P43(x,y) ⇐ (∃z) [E16(z) ˄ P39i(x,z) ˄ P40(z,y)]</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
